--- a/Task1.ipynb
+++ b/Task1.ipynb
@@ -23,6 +23,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<b>Dataset Link:</b>\n",
+    "https://raw.githubusercontent.com/AdiPersonalWorks/Random/master/student_scores%20-%20student_scores.csv\n",
+    "<br><b>Github Link: </b>\n",
+    "https://github.com/neelgandhi77/predict-_percentage_LinearRegression.git"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<h3>Linear Regression</h3>\n",
     "\n",
     "    Linear regression attempts to model the relationship between two variables by fitting a linear equation to observed data. One variable is considered to be an explanatory variable, and the other is considered to be a dependent variable.\n",
